# tambola

./: .gitignore  Makefile  README.md  pyproject.toml
src/: exceptions.py  main.py
src/domain/: claim_result.py  claim_type.py  ticket.py
src/factory/: claim_strategy_factory.py
src/strategies/: base_claim_strategy.py  bottom_line_claim_strategy.py  early_five_claim_strategy.py  full_house_claim_strategy.py  middle_line_claim_strategy.py  top_line_claim_strategy.py
tests/: conftest.py
tests/domain/: test_claim_result.py  test_claim_type.py  test_ticket.py
tests/factory/: test_claim_strategy_factory.py
tests/strategies/: test_bottom_line_claim_strategy.py  test_early_five_claim_strategy.py  test_full_house_claim_strategy.py  test_middle_line_claim_strategy.py  test_top_line_claim_strategy.py
