[project]
name = "tambola"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["pytest>=8.3.4", "black>=24.10.0", "ruff>=0.8.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = [
    "."
]


# Markers definition
markers = [
"ticket: Ticket model tests",
"claim_type: ClaimType model tests",
"claim_result: ClaimResult model tests",
"top_line_claim_strategy: TopLineClaimStrategy tests",
]